improve docker file for Jenkins

--- a/infra/ci/Dockerfile
+++ b/infra/ci/Dockerfile
@@ -1,6 +1,13 @@
 FROM ubuntu:14.04
+
+# Install basics
 RUN apt-get update && apt-get install -y wget git curl zip
+
+# Install Jenkins
 RUN wget -q -O - https://jenkins-ci.org/debian/jenkins-ci.org.key | apt-key add -
 RUN sh -c 'echo deb http://pkg.jenkins-ci.org/debian binary/ > /etc/apt/sources.list.d/jenkins.list'
 RUN apt-get update && apt-get install -y jenkins
-RUN rm -rf /var/lib/apt/lists/*
+EXPOSE 8080
+
+# Clean up APT when done.
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
