--- a/app/com.github.yatol.backend/gradle/wrapper/gradle-wrapper.properties
+++ b/app/com.github.yatol.backend/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Aug 17 13:39:41 CEST 2015
+#Mon Aug 17 16:52:11 CEST 2015
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.5-rc-2-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.6-bin.zip
