--- a/.gitignore
+++ b/.gitignore
@@ -37,13 +37,20 @@ tmp/
 *.swp
 *~.nib
 local.properties
+.settings/
 .loadpath
+
+# Eclipse Core
+.project
 
 # External tool builders
 .externalToolBuilders/
 
 # CDT-specific
 .cproject
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
 # Java annotation processor (APT)
 .factorypath
