--- a/infra/ci/Dockerfile
+++ b/infra/ci/Dockerfile
@@ -8,7 +8,11 @@ RUN apt-get install -y wget git curl zip
 RUN wget -q -O - https://jenkins-ci.org/debian/jenkins-ci.org.key | apt-key add -
 RUN sh -c 'echo deb http://pkg.jenkins-ci.org/debian binary/ > /etc/apt/sources.list.d/jenkins.list'
 RUN apt-get update && apt-get install -y jenkins
-EXPOSE 8080
 
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+EXPOSE 8080
+
+CMD tail -f /var/log/jenkins/jenkins.log
+
