--- a/infra/db-srv/Dockerfile
+++ b/infra/db-srv/Dockerfile
@@ -5,4 +5,9 @@ RUN apt-get update
 RUN apt-get install -y wget git curl zip
 RUN apt-get install -y postgresql
 
+# Clean up APT when done.
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
 EXPOSE 5432
+
+CMD tail -f /var/log/postgresql/postgresql.log
