put docker in the ci docker image

--- a/infra/ci/Dockerfile
+++ b/infra/ci/Dockerfile
@@ -4,6 +4,11 @@ FROM ubuntu:15.04
 RUN apt-get update
 RUN apt-get install -y wget git curl zip
 RUN apt-get install -y openjdk-8-jdk
+RUN apt-get install -qqy  \
+    apt-transport-https \
+    ca-certificates \
+    lxc  \
+    iptables
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Install Jenkins
@@ -28,5 +33,17 @@ COPY jenkins.sh /usr/local/bin/jenkins.sh
 COPY plugins.sh /usr/local/bin/plugins.sh
 COPY plugins.txt /usr/share/jenkins/plugins.txt
 RUN /usr/local/bin/plugins.sh /usr/share/jenkins/plugins.txt
+
+# Install Docker from Docker Inc. repositories.
+RUN curl -sSL https://get.docker.com/ubuntu/ | sh
+
+# Install the magic wrapper.
+ADD ./wrapdocker /usr/local/bin/wrapdocker
+RUN chmod +x /usr/local/bin/wrapdocker
+
+
+# Define additional metadata for our image.
+VOLUME /var/lib/docker
+CMD ["wrapdocker"]
 
 ENTRYPOINT ["/usr/local/bin/jenkins.sh"]
