--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-# Created by https://www.gitignore.io/api/gradle,eclipse,java
+# Created by https://www.gitignore.io/api/java,gradle,eclipse,vagrant,osx,windows,linux
+
+### MANUAL additions ###
+# Eclipse
+.recommenders
 
 ### Java ###
 *.class
@@ -39,13 +43,15 @@ tmp/
 local.properties
 .settings/
 .loadpath
-.recommenders
 
 # Eclipse Core
 .project
 
 # External tool builders
 .externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
 
 # CDT-specific
 .cproject
@@ -68,3 +74,61 @@ local.properties
 
 ### Vagrant ###
 .vagrant/
+
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+
+### Windows ###
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+
+### Linux ###
+*~
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
