--- a/infra/Vagrantfile
+++ b/infra/Vagrantfile
@@ -9,7 +9,13 @@ Vagrant.configure(2) do |config|
   # Share the Git repository with the VM
   config.vm.synced_folder "../", "/yatol"
 
+  # Configure more memory and cores
+  config.vm.provider "virtualbox" do |v|
+    v.memory = 4096
+    v.cpus = 4
+  end
+
   # Configure provisioning
-  config.vm.provision "shell", path: "vagrant_install_docker.sh"
+  config.vm.provision "shell", path: "vagrant_provision.sh"
 
 end
