expose docker port of VM

--- a/infra/Vagrantfile
+++ b/infra/Vagrantfile
@@ -5,6 +5,7 @@ Vagrant.configure(2) do |config|
 
   # Forward Jenkins port to host 8080
   config.vm.network "forwarded_port", guest: 8080, host: 8080
+  config.vm.network "forwarded_port", guest: 2375, host: 2375
 
   # Share the Git repository with the VM
   config.vm.synced_folder "../", "/yatol"
