DB-server added via gradle. If starting with ./gradlew startAppContainer both Jboss (Port 8081) and Postgres (Port 5432) container started and can be accessed, but backend.war doesn't find persistence unit and deployment breaks. to be continued...

--- a/infra/app-server/build.gradle
+++ b/infra/app-server/build.gradle
@@ -39,9 +39,9 @@ task buildAppImage(type: DockerBuildImage, dependsOn: createAppDockerfile) {
 }
 
 task createAppContainer(type: DockerCreateContainer) {
-    dependsOn buildAppImage
+    dependsOn buildAppImage, ':infra:db-srv:startDBContainer'
     targetImageId { buildAppImage.getImageId() }
-    portBindings = ['8081:8081']
+    portBindings = ['8081:8080', '9990:9990']
 }
 
 task startAppContainer(type: DockerStartContainer) {
@@ -54,9 +54,9 @@ task stopAppContainer(type: DockerStopContainer) {
 }
 
 task createContainer(type: DockerCreateContainer) {
-    dependsOn buildAppServerImage
+    dependsOn buildAppServerImage, ':infra:db-srv:startDBContainer'
     targetImageId { buildImage.getImageId() }
-    portBindings = ['8080:8080']
+    portBindings = ['8080:8080', '9990:9990']
 }
 
 task startContainer(type: DockerStartContainer) {
