--- a/infra/Vagrantfile
+++ b/infra/Vagrantfile
@@ -3,9 +3,20 @@ Vagrant.configure(2) do |config|
   # Use Ubuntu 15.04
   config.vm.box = "ubuntu/vivid64"
 
-  # Forward Jenkins port to host 8080
+  # Jenkins
   config.vm.network "forwarded_port", guest: 8080, host: 8080
+
+  # Docker
   config.vm.network "forwarded_port", guest: 2375, host: 2375
+
+  # JBoss
+  config.vm.network "forwarded_port", guest: 8081, host: 8081
+
+  # JBoss Admin Port
+  config.vm.network "forwarded_port", guest: 9990, host: 9990
+
+  # Postgres
+  config.vm.network "forwarded_port", guest: 5432, host: 5432
 
   # Share the Git repository with the VM
   config.vm.synced_folder "../", "/yatol"
