--- a/infra/db-srv/Dockerfile
+++ b/infra/db-srv/Dockerfile
@@ -14,9 +14,13 @@ RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates
 	&& apt-get purge -y --auto-remove ca-certificates wget
 
 # make the "en_US.UTF-8" locale so postgres will be utf-8 enabled by default
-RUN apt-get update && apt-get install -y locales && rm -rf /var/lib/apt/lists/* \
-	&& localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
-ENV LANG en_US.utf8
+# RUN apt-get update
+# RUN apt-get install -y locales
+# RUN rm -rf /var/lib/apt/lists/*
+# RUN localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
+# RUN apt-get update && apt-get install -y locales && rm -rf /var/lib/apt/lists/* \
+#	&& localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
+# ENV LANG en_US.utf8
 
 RUN mkdir /docker-entrypoint-initdb.d
 
