--- a/infra/db-srv/build.gradle
+++ b/infra/db-srv/build.gradle
@@ -11,6 +11,7 @@ task createDBContainer(type: DockerCreateContainer) {
     dependsOn buildDbDockerImage
     targetImageId { buildDbDockerImage.getImageId() }
     portBindings = ['5432:5432']
+    containerName = "dbContainer"
 }
 
 task startDBContainer(type: DockerStartContainer) {
