--- a/infra/app-server/build.gradle
+++ b/infra/app-server/build.gradle
@@ -16,8 +16,8 @@ task buildAppServerImage(type: DockerBuildImage) {
  */
 task copyWars(type: Copy) {
     dependsOn ':backend:war', ':frontend:war'
-    from project(':backend').file("build/libs/backend-${version}.war")
-    from project(':frontend').file("build/libs/frontend-${version}.war")
+    from project(':backend').file("build/libs/backend-${project.version}.war")
+    from project(':frontend').file("build/libs/frontend-${project.version}.war")
     into project.file('build/app')
 }
 
