make localhost known as docker host

--- a/infra/build.gradle
+++ b/infra/build.gradle
@@ -6,4 +6,8 @@ buildscript {
 
 subprojects {
     apply plugin: 'com.bmuschko.docker-remote-api'
+
+    docker {
+        url = "http://dockerhost:2375"
+    }
 }
