Adding cfg for vagrant te execution

--- a/acceptanceTest/YatolTests/vagrant/linux/Vagrantfile
+++ b/acceptanceTest/YatolTests/vagrant/linux/Vagrantfile
@@ -23,6 +23,8 @@ Vagrant.configure(2) do |config|
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
   # config.vm.network "forwarded_port", guest: 10099, host: 10099
+config.vm.network :forwarded_port, guest: 22, host: 2222, id: "ssh", disabled: true
+config.vm.network :forwarded_port, guest: 22, host: 64675, auto_correct: true
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
@@ -32,7 +34,7 @@ Vagrant.configure(2) do |config|
   # Bridged networks make the machine appear as another physical device on
   # your network.
   # config.vm.network "public_network"
-
+  
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
@@ -50,7 +52,7 @@ Vagrant.configure(2) do |config|
      vb.gui = true
   #
   #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
+     vb.memory = "1024"
    end
   #
   # View the documentation for the provider you are using for more
