--- a/acceptanceTest/YatolTests/vagrant/windows/Vagrantfile
+++ b/acceptanceTest/YatolTests/vagrant/windows/Vagrantfile
@@ -25,7 +25,7 @@ Vagrant.configure(2) do |config|
   # accessing "localhost:8080" will access port 80 on the guest machine.
   # config.vm.network "forwarded_port", guest: 80, host: 8080
   config.vm.network "forwarded_port", host: 33389, guest: 3389
-  config.vm.network "forwarded_port", host: 2222, guest: 22
+  config.vm.network "forwarded_port", host: 64678, guest: 22
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
@@ -53,7 +53,7 @@ Vagrant.configure(2) do |config|
      vb.gui = true
   #
   #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
+     vb.memory = "1024"
    end
   #
   # View the documentation for the provider you are using for more
