--- a/acceptanceTest/YatolTests/vagrant/linux/Vagrantfile
+++ b/acceptanceTest/YatolTests/vagrant/linux/Vagrantfile
@@ -39,9 +39,8 @@ config.vm.network :forwarded_port, guest: 22, host: 64675, auto_correct: true
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  # config.vm.synced_folder "/home/karsten/.testeditor_headless/", "/vagrant_data"
   config.vm.synced_folder "../../../", "/vagrant_data"
-  config.vm.synced_folder ENV['TESTEDITOR_HOME'], "/vagrant_bin"
+  #config.vm.synced_folder ENV['TESTEDITOR_HOME'], "/vagrant_bin"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -68,9 +67,13 @@ config.vm.network :forwarded_port, guest: 22, host: 64675, auto_correct: true
   # Enable provisioning with a shell script. Additional provisioners such as
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+  	sudo mkdir /vagrant_bin
+  	wget --no-check-certificate -O /tmp/testeditor.zip https://ci.testeditor.org/job/Test-Editor-Full-CI/lastSuccessfulBuild/artifact/product/org.testeditor.product/target/products/TestEditor-linux.gtk.x86_64.zip
+  	sudo apt-get install -y unzip
+  	unzip /tmp/testeditor.zip -d /vagrant_bin/
   #   "sudo startx &"
   #   sudo apt-get update
   #   sudo apt-get install -y apache2
-  # SHELL
+  SHELL
 end
