--- a/acceptanceTest/YatolTests/vagrant/windows/Vagrantfile
+++ b/acceptanceTest/YatolTests/vagrant/windows/Vagrantfile
@@ -69,8 +69,9 @@ Vagrant.configure(2) do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+  	/cygdrive/c/wget/bin/wget --no-check-certificate -O /tmp/testeditor.zip https://ci.testeditor.org/job/Test-Editor-Full-CI/lastSuccessfulBuild/artifact/jreproduct/org.testeditor.jre.product/target/products/TestEditor_JRE-win32.win32.x86.zip
   #   sudo apt-get update
   #   sudo apt-get install -y apache2
-  # SHELL
+  SHELL
 end
