Adding properties to test execution environment

--- a/acceptanceTest/YatolTests/vagrant/windows/Vagrantfile
+++ b/acceptanceTest/YatolTests/vagrant/windows/Vagrantfile
@@ -42,7 +42,7 @@ Vagrant.configure(2) do |config|
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
   config.vm.synced_folder "../../../", "/vagrant_data"
-  config.vm.synced_folder ENV['TESTEDITOR_HOME'], "/vagrant_bin"
+  #config.vm.synced_folder ENV['TESTEDITOR_HOME'], "/vagrant_bin"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -69,9 +69,10 @@ Vagrant.configure(2) do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  config.vm.provision "shell", inline: <<-SHELL
-  	/cygdrive/c/wget/bin/wget --no-check-certificate -O /tmp/testeditor.zip https://ci.testeditor.org/job/Test-Editor-Full-CI/lastSuccessfulBuild/artifact/jreproduct/org.testeditor.jre.product/target/products/TestEditor_JRE-win32.win32.x86.zip
+#  config.vm.provision "shell", inline: <<-SHELL
+#  	/cygdrive/c/wget/bin/wget --no-check-certificate -O /tmp/testeditor.zip https://ci.testeditor.org/job/Test-Editor-Full-CI/lastSuccessfulBuild/artifact/jreproduct/org.testeditor.jre.product/target/products/TestEditor_JRE-win32.win32.x86.zip
+  	
   #   sudo apt-get update
   #   sudo apt-get install -y apache2
-  SHELL
+ # SHELL
 end
