--- a/acceptanceTest/webfixture/build.gradle
+++ b/acceptanceTest/webfixture/build.gradle
@@ -27,6 +27,7 @@ dependencies {
         exclude(module: 'selenium-safari-driver')
     }
     compile group: 'org.seleniumhq.selenium', name: 'selenium-server', version: '2.47.1'
+    compile 'com.sun.jersey:jersey-bundle:1.19'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
