--- a/acceptanceTest/webfixture/build.gradle
+++ b/acceptanceTest/webfixture/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id "de.undercouch.download" version "2.0.0"
 }
 
+import de.undercouch.gradle.tasks.download.Download
+
 apply plugin: 'java'
 apply plugin: 'maven'
 
@@ -39,9 +41,10 @@ dependencies {
     }
 }
 
-task downloadPatchedFitnesse(type: de.undercouch.gradle.tasks.download.Download) {
+task downloadPatchedFitnesse(type: Download) {
     src 'https://bintray.com/artifact/download/test-editor/Ressources/fitnesse.jar'
     dest "$buildDir/libs"
+    onlyIfNewer true
 }
 
 task assembleWebFixtureLibs(type: Copy) {
