dependency for creating image

--- a/infra/ci/build.gradle
+++ b/infra/ci/build.gradle
@@ -12,6 +12,7 @@ task buildDockerImage(type: DockerBuildImage) {
 
 // TODO do this nicer ;)
 task createJenkinsContainer(type: Exec) {
+    dependsOn buildDockerImage
     executable "sh"
     args "start-jenkins.sh"
 }
