--- a/acceptanceTest/YatolTests/vagrant/windows/Vagrantfile
+++ b/acceptanceTest/YatolTests/vagrant/windows/Vagrantfile
@@ -42,7 +42,7 @@ Vagrant.configure(2) do |config|
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
   config.vm.synced_folder "../../../", "/vagrant_data"
-  #config.vm.synced_folder ENV['TESTEDITOR_HOME'], "/vagrant_bin"
+  config.vm.synced_folder "test-editor", "/vagrant_bin"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
