don't fail release on snapshot dependency

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ if (!project.hasProperty('release.useAutomaticVersion')) {
     project.ext.setProperty('release.useAutomaticVersion', true)
 }
 release {
+    failOnSnapshotDependencies = false // required for org.testeditor.fixture:core-fixture:1.7.2-SNAPSHOT
     preTagCommitMessage = '[release] - pre tag commit: '
     tagCommitMessage = '[release] - creating tag: '
     newVersionCommitMessage = '[release] - new version commit: '
