--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,4 @@
-version=1.0.0
+// Released version will be currentVersion.releaseNumber
+version=1.0
+release.useAutomaticVersion=true
+release.number=0
