--- a/acceptanceTest/YatolTests/build.gradle
+++ b/acceptanceTest/YatolTests/build.gradle
@@ -18,7 +18,7 @@ task unzipTestEditorLinux(dependsOn: downloadTestEditorLinux, type: Copy) {
     into target
 }
 
-task runServiceAcceptanceTest(dependsOn: unzipTestEditorLinux, type: Exec) {
+task runServiceAcceptanceTest(dependsOn: unzipTestEditorLinux, ':infra:app-server:startAppContainer', type: Exec) {
     executable "sh"
     doFirst {
     	logger.lifecycle("Executing $args")
@@ -26,7 +26,7 @@ task runServiceAcceptanceTest(dependsOn: unzipTestEditorLinux, type: Exec) {
     args "-c", "java -jar ${unzipTestEditorLinux.target}/plugins/org.eclipse.equinox.launcher_1.3.100.v20150511-1540.jar -application org.testeditor.core.headlesstestrunner -consoleLog -clean -data ${project.projectDir.parent} ExecuteTest=YatolTests.ServicePipeline ExecuteTestEnv=localhost"
 }
 
-task runAcceptanceTestLinux(dependsOn: unzipTestEditorLinux, type: Exec) {
+task runAcceptanceTestLinux(dependsOn: unzipTestEditorLinux,':infra:app-server:startAppContainer', type: Exec) {
     executable "sh"
     doFirst {
     	logger.lifecycle("Executing $args")
@@ -48,7 +48,7 @@ task unzipTestEditorWindows(dependsOn: downloadTestEditorWindows, type: Copy) {
     into target
 }
 
-task runAcceptanceTestWindows(dependsOn: unzipTestEditorWindows, type: Exec) {
+task runAcceptanceTestWindows(dependsOn: unzipTestEditorWindows,':infra:app-server:startAppContainer', type: Exec) {
     executable "sh"
     doFirst {
     	logger.lifecycle("Executing $args")
